# softwiki

./: .env.example  .gitignore  Makefile  README.md  config.example.yaml  pyproject.toml  sw
docs/: README.md  application-system.md  dependencies.md  feature-todo.md  model-guide.md  pr.md  project-status.md  shell-search.md  system-mapping.md  technical-implementation.md  user-manual.md  wiki-sys.md  work-log.md  workspace_structure.md
docs/01-architecture/: data-flow.md  interfaces.md  overview.md
docs/02-design/: config-schema.md  data-model.md  extension-points.md  graph-rag.md  pipeline.md  rag-engine.md
docs/03-operations/: cli.md  setup.md  storage.md
docs/04-guides/: quickstart.md  shell.md  webui.md  workflows.md
docs/05-roadmap/: status.md
docs/06-archive/: application-system.md  work-log.md
scripts/: import-wiki.py  init_db.py  preview_logo.py  seed_eva.py  seed_sample.py
softwiki/: config.py
softwiki/api/: server.py
softwiki/cli/: main.py  shell.py
softwiki/extraction/: claim_extractor.py  graph_extractor.py  processor.py  timeline_extractor.py
softwiki/graph_rag/: adapter.py
softwiki/ingestion/: dedup.py  file_store.py  normalize.py  pdf_loader.py  web_loader.py
softwiki/intelligence/: answer_engine.py  llm_client.py  scope_guard.py
softwiki/mcp/: server.py  sse.py
softwiki/rag/: bm25_store.py  (+5 more)
tests/: test_answer_engine.py  test_config_cascade.py  test_extraction.py  test_ingestion.py  test_mcp.py  test_rag.py  test_scope_guard.py  test_user_mode.py  test_workspace.py
web/: next.config.ts  package-lock.json  package.json
(+39 files in other folders)
