[project]
name = "softwiki"
version = "0.1.0"
description = "Universal Domain-Independent Research Wiki and RAG Engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "pypdf>=3.0.0",
    "beautifulsoup4>=4.11.0",
    "requests>=2.28.0",
    "openai>=1.0.0",
    "rank-bm25>=0.2.2",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]
graph = [
    "lightrag-hku>=1.5.0",
]

[project.scripts]
softwiki = "softwiki.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["softwiki*"]
namespaces = true
